[tool.poetry]
name = "mvalrt"
version = "0.1.0"
description = "Get alerted about movies in your area"
authors = ["Francis Genet <francis.genet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
